force-app/main/default/objects/CPQ_ARM_DataMapping__c/CPQ_ARM_DataMapping__c.object-meta.xml
<CustomObject>
    <label>CPQ ARM Data Mapping</label>
    <pluralLabel>CPQ ARM Data Mappings</pluralLabel>
    <description>Stores data mapping configurations between Salesforce CPQ source entities and ARM target entities for migration jobs.</description>
    <nameField>
        <label>Mapping Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>