force-app/main/default/objects/CPQ_ARM_DataMapping__c/fields/MappingName__c.field-meta.xml
<CustomField>
    <fullName>MappingName__c</fullName>
    <label>Mapping Name</label>
    <description>Descriptive name for this data mapping configuration record, used for identification in reports and the mapping wizard UI.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>