force-app/main/default/objects/CPQ_ARM_DataMapping__c/fields/SourceEntity__c.field-meta.xml
<CustomField>
    <fullName>SourceEntity__c</fullName>
    <label>Source Entity</label>
    <description>API name of the source CPQ object being mapped (e.g., SBQQ__Quote__c). Stored as text to support dynamic metadata discovery across org boundaries.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>