force-app/main/default/objects/CPQ_ARM_DataMapping__c/fields/TargetEntity__c.field-meta.xml
<CustomField>
    <fullName>TargetEntity__c</fullName>
    <label>Target Entity</label>
    <description>API name of the target ARM object receiving the migrated data (e.g., arm__Quote__c). Stored as text to support dynamic metadata discovery.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>